--- a/lesson-33-requests-part-1/task2/style.css
+++ b/lesson-33-requests-part-1/task2/style.css
@@ -25,7 +25,8 @@ h2 {
     font-size: 2rem;
 }
 
-/* === The code is inserted from the lesson task === */
+
+/* ==================== */
 
 .title {
     font-size: 24px;
@@ -52,7 +53,7 @@ h2 {
     width: 100%;
 }
 
-.list__item {
+.list-item {
     display: flex;
     align-items: center;
     height: 40px;
@@ -61,18 +62,37 @@ h2 {
     margin-bottom: 8px;
     padding: 8px;
 }
-
-.list__item_done {
-    text-decoration: line-through;
-    opacity: 0.7;
-}
-
-.list__item:last-child {
+.list-item:last-child {
     margin-bottom: 0;
 }
-
-.list__item-checkbox {
+.list-item_done {
+    opacity: 0.7;
+}
+.list-item_done .list-item__text {
+    text-decoration: line-through;
+}
+.list-item__checkbox {
     margin-right: 8px;
+}
+.list-item__delete-btn {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    margin-left: auto;
+    text-decoration: none;
+    padding: 0;
+    transform: rotate(45deg);
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    opacity: 0.7;
+}
+.list-item__delete-btn::before {
+    content: "+";
 }
 
 .btn {
